# order_management

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/core/: config.py  containers.py  db.py
app/models/: __init__.py  base.py  customer.py  order.py  product.py
app/repos/: base.py  customer.py  order.py  product.py
app/schemas/customer/: response.py
app/schemas/order/: request.py  response.py
app/schemas/order_item/: response.py
app/schemas/product/: response.py
app/services/: customer.py  order.py  product.py
app/tests/: conftest.py
app/tests/web_api/products/: conftest.py  test__get.py  test__post.py
app/views/: customer.py  order.py  product.py
