[tool.poetry]
name = "order-management"
version = "0.1.0"
description = "A small Order Management microservice using FastAPI, Pydantic, Beanie, and MongoDB"
authors = ["Anna Kizoxyan <your@email.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.100.0,<0.101.0"
uvicorn = ">=0.24.0,<0.25.0"
beanie = { version = ">=2.0.0,<3.0.0", extras = ["odm"] }
motor = ">=3.1.1,<4.0.0"
pydantic = { version = ">=2.11.7,<3.0.0", extras = ["email"] }
dependency-injector = ">=4.48.1,<5.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
pytest-asyncio = ">=0.23.0,<0.24.0"
httpx = ">=0.27.0,<0.28.0"

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^8.4.2"
faker = "^25.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
